meta tag viewport added

--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Book the best body massage in Pattaya of your own surroundings. Sensational Home Spa offering full body massage services.">
     <meta name="keywords" content="best body massage in pattaya, full body massage in pattaya">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
