--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Sensational Home Spa is the best Thai Massage spa specializing in best authentic Thai massage. Call us +66 842705334 and book our therapists now.">
     <meta name="keywords" content="authentic thai massage, best thai massage">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
