--- a/our-girls.html
+++ b/our-girls.html
@@ -14,7 +14,7 @@
         content="Call us at +66 842705334 and Beautiful girls massage in pattaya now. We have the list of Hot and sexy lady who provide you Best Sexual body to body massages in pattaya">
     <meta name="keywords"
         content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
