--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Book the best Thai massage in Pattaya of your own surroundings. Get a Thai massage in Pattaya from Sensational Home Spa.">
     <meta name="keywords" content="best thai massage in pattaya, thai massage in pattaya, thai massage pattaya">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
