--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -111,7 +111,7 @@
                     </button>
 
                     <a class="navbar-brand page-scroll font-family-alt letter-spacing-1 text-extra-large text-uppercase"
-                        href="http://mayshomespa.com/">
+                        href="https://outcallmassagespattaya.com/">
                         <img class="logo-navbar-dark img-fluid" src="assets/images/logo/logo-may-spa.png"
                             alt="Best aroma oil massages in pattaya" style='height: 55px'>
                         <img class="logo-navbar-white img-fluid" src="assets/images/logo/logo-may-spa.png"
