--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -13,7 +13,7 @@
         content="Sensational Home Spa offers best hotel room Massage in Pattaya, specializing in best room service massage in Pattaya. Call us +66 842705334 and book our therapists now.">
     <meta name="keywords"
         content="hotel massages in pattaya, hotel room massage in pattaya, room service massage in pattaya">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 
@@ -131,7 +131,7 @@
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
-                        <li><a href="index.html" class="page-scroll">Contact</a></li>
+                        <li><a href="contact.html" class="page-scroll">Contact</a></li>
 
                     </ul>
                 </div>
@@ -152,7 +152,8 @@
                         style='padding-top: 50px;'>OUTCALL/HOTEL MASSAGE</h1>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        Sensational outcall massage/home massage and spa is serving community from more than 5 years.our motto is to provide
+                        Sensational outcall massage/home massage and spa is serving community from more than 5 years.our
+                        motto is to provide
                         authentic services to customer at their doorstep.our trained and professional therapist makes
                         complete relaxation to customers in their own room.our lady use with authentic , herbal and skin
                         friendly massage oil for therapy.our services makes complete satisfaction to customers.
