--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -130,7 +130,7 @@
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
-                        <li><a href="index.html" class="page-scroll">Contact</a></li>
+                        <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
