--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
-                        <li><a href="index.html" class="page-scroll">Contact</a></li>
+                        <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
@@ -199,10 +199,8 @@
                              />
 
                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                                style='font-family: Great Vibes, cursive;'>Sensational outcall massage pattaya </h1>
-                            <h2 style='float:right;'
-                                class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-8'>
-                                - &nbsp;By may</h2>
+                                style='font-family: Great Vibes, cursive;'>Sensational Outcall Massage and Spa Pattaya</h1>
+                            
 
 
                         </div>
@@ -215,9 +213,7 @@
 
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                GET PROFESSIONAL AND BEST BODY SPA/MASSAGE IN JUST ONE CLICK BY SITTING AT HOME/HOTEL AT
-                                PATTAYA AND FEEL THE BEST EXPERIENCE OF AUTHENTIC THAI MASSAGE BY OUR TRAINED AND
-                                PROFESSIONAL THERAPIST.
+                                Get the best massage in your own hotel/home room with sensational outcall massage pattaya by trained and beautifull therapist.
 
                             </h2>
 
