--- a/our-girls.html
+++ b/our-girls.html
@@ -229,16 +229,13 @@
 
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
+                    <h1>Beautifull Pattaya Girls by Sensational Outcall Massage Pattaya</h1>
                     <h3
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                         OUR GIRLS</h3>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <i>Outcall massages pattaya provides you wide range of beautifull girls at your doorstep.we
-                            offers you to select beautifull girl/lady of your own choice.lady will reach your
-                            destination in about 15-30 minutes according to distance and traffic.
-                            Our beautifull and experienced therapist provides you complete satisfaction and makes your
-                            time more special.Their magical fingers revitalize your mind body and soul.</i></p>
+                        <i>We offers you bulk of beautiful Pattaya girls and u can choose girl of your choice and make your time more special. Outcall massages pattaya provides you beautiful lady massage services at your doorstep. Beautiful lady will reach your destination in about 15-30 minutes according to distance and traffic. Our beautifull and experienced therapist provides you complete satisfaction and makes your time more special.Their magical fingers revitalize your mind body and soul.</i></p>
 
                     <!-- <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         <i>SHS is
