--- a/our-girls.html
+++ b/our-girls.html
@@ -229,7 +229,8 @@
 
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h1>Beautifull Pattaya Girls by Sensational Outcall Massage Pattaya</h1>
+                    <h1
+                        class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">Beautifull Pattaya Girls by Sensational Outcall Massage Pattaya</h1>
                     <h3
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                         OUR GIRLS</h3>
