--- a/our-girls.html
+++ b/our-girls.html
@@ -240,11 +240,13 @@
                         <i>SHS is
                             proud to present some of the industry trained therapists with a good work experience.</i>
                     </p> -->
+                    
+                </div>
+                <!-- //.
+                    col-md-6 -->
                     <h3
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                         OUR GIRLS</h3>
-                </div>
-                <!-- //.col-md-6 -->
             </div>
             
             <div class="row">
