--- a/our-girls.html
+++ b/our-girls.html
@@ -248,7 +248,7 @@
                    
                     
             </div>
-            <div class="col-md-6 col-md-offset-3 text-center"></div>
+            <div class="col-md-6 col-md-offset-3 text-center">
             <h3
                         class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color">
                         OUR GIRLS</h3>
