--- a/our-girls.html
+++ b/our-girls.html
@@ -253,7 +253,7 @@
             <div class="row">
                 
                                
-                <h3>OUR GIRLS</h3>
+                <h3 style="text-align: center;">OUR GIRLS</h3>
                 <br>
                 <br>
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
