--- a/our-girls.html
+++ b/our-girls.html
@@ -9,9 +9,9 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Beautiful Girls Massage in Pattaya | Sexy & Hot Massages in Pattaya</title>
+    <title>Beautiful Lady Massage Services | Sexy & Hot Girls Massages in Pattaya</title>
     <meta name="description"
-        content="Call us at +66 842705334 and Beautiful girls massage in pattaya now. We have the list of Hot and sexy lady who provide you Best Sexual body to body massages in pattaya">
+        content="Call us at +66 842705334 and Beautiful lady massage services in pattaya now. We have the list of Hot and sexy girls who provide you Best Sexual body to body massages in pattaya">
     <meta name="keywords"
         content="Best girls outcall massage, Beautifull girls massage in pattaya, Sexy lady massages in pattaya, Hot lady massage in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
