--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                Get the best massage in your own hotel/home room with sensational outcall massage pattaya by trained and beautifull therapist.
+                                Get the best and authentic body massage and spa at your own hotel/home room in just one click by our beautiful and expert therapist available 24 hours through out pattaya.
 
                             </h2>
 
