--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -149,7 +149,7 @@
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-1">
                     <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>OUTCALL/HOTEL MASSAGE</h1>
+                        style='padding-top: 50px;'>Home & Hotel Room Massage by Sensational Outcall Massage</h1>
 
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Sensational outcall massage/home massage and spa is serving community from more than 5 years.our
@@ -158,8 +158,8 @@
                         complete relaxation to customers in their own room.our lady use with authentic , herbal and skin
                         friendly massage oil for therapy.our services makes complete satisfaction to customers.
                     </p>
-                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='padding-top: 50px;'>BENEFITS OF OUTCALL MASSAGE SERVICES</h1>
+                    <h2 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style='padding-top: 50px;'>BENEFITS OF OUTCALL MASSAGE SERVICES</h2>
 
 
                     <ul class='margin-2 xs-text-large text-extra-large text-gray-dark-2 '>
@@ -194,7 +194,7 @@
 
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
                         <strong>Contact Us</strong></p>
-
+<h2>Book an authentic Thai/oil/aroma massage at your hotel room in just one click.</h2>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         +66 84-270-5334
                         (Whatsapp/line/wechat) </p>
