--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -194,7 +194,8 @@
 
                     <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
                         <strong>Contact Us</strong></p>
-<h2>Book an authentic Thai/oil/aroma massage at your hotel room in just one click.</h2>
+                        <h2 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style='padding-top: 50px;'>Book an authentic Thai/oil/aroma massage at your hotel room in just one click.</h2>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         +66 84-270-5334
                         (Whatsapp/line/wechat) </p>
