--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                              />
 
                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                                style='font-family: serif, cursive; font-style: italic;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
+                                style='font-family: LUCIDA CALLIGRAPHY;'>Sensational Outcall Massage and Spa Pattaya - By May</h1>
                             
 
 
