--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
                             <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
                              />
 
-                            <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                                style='font-family: Brush Script MT;'>Sensational Outcall Massage and Spa Pattaya - By May</h1>
-                            
+                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
+                             style='font-family: Great Vibes, cursive;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
 
 
                         </div>
