--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                             <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
                              />
 
-                             <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                             style='font-family: Great Vibes, cursive;'>Sensational Outcall Massage and Spa Pattaya - by May</h2>
+                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
+                             style='font-family: Great Vibes, cursive;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
 
 
                         </div>
@@ -207,7 +207,7 @@
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
-                                <b>An expert outcall massage and spa services in pattaya</b>
+                                <b>A Best outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
