--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                              />
 
                              <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                             style='font-family: Great Vibes, cursive;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
+                             style='font-family: Brush Script MT;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
 
 
                         </div>
