--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
-                                <b>A Best outcall massage and spa services in pattaya</b>
+                                <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
