--- a/index.html
+++ b/index.html
@@ -84,9 +84,14 @@
             text-align: center;
         }
 
-        h2 {
+
+h2{
+    font-family: 'Signika', sans-serif;
+
+}
+        /* h2 {
             font-family: 'Great Vibes', cursive;
-        }
+        } */
         .fontstyle {
             font-family: 'Signika', sans-serif;
         }
@@ -172,7 +177,7 @@
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
-                        <li><a href="contact.html" class="page-scroll">Contact</a></li>
+                        <li><a href="index.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
@@ -198,8 +203,11 @@
                             <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
                              />
 
-                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4"
-                             style='font-family: Brush Script MT;'>Sensational Outcall Massage and Spa Pattaya - by May</h1>
+                            <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold"  
+                                >Sensational Outcall Massage Pattaya - By May </h2>
+                            <!-- <h2 style='float:right;'
+                                class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold'>
+                                - &nbsp;By May</h2> -->
 
 
                         </div>
@@ -207,12 +215,14 @@
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
-                                <b>Best outcall massage and spa services in pattaya</b>
+                                <b>An expert outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
-                                Get the best and authentic body massage and spa at your own hotel/home room in just one click by our beautiful and expert therapist available 24 hours through out pattaya.
+                                GET PROFESSIONAL AND BEST BODY SPA/MASSAGE IN JUST ONE CLICK BY SITTING AT HOME/HOTEL AT
+                                PATTAYA AND FEEL THE BEST EXPERIENCE OF AUTHENTIC THAI MASSAGE BY OUR TRAINED AND
+                                PROFESSIONAL THERAPIST.
 
                             </h2>
 
