--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ h2{
     font-family: 'Signika', sans-serif;
 
 }
-        /* h2 {
+        h2 {
             font-family: 'Great Vibes', cursive;
-        } */
+        }
         .fontstyle {
             font-family: 'Signika', sans-serif;
         }
@@ -106,12 +106,19 @@ h2{
                 text-align: center !important;
             }
             .spaimg{
-                visibility: hidden;
+                margin-top: 120px;
 
+            }
+
+            .mobile-padding{
+                padding-top: 0;
             }
 
             .sm-title-extra-large-1{
                         font-size: 22px !important;
+            }
+            .text-mobile-center{
+                text-align: center;
             }
         }
     </style>
@@ -203,18 +210,18 @@ h2{
                             <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
                              />
 
-                            <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold"  
-                                >Sensational Outcall Massage Pattaya - By May </h2>
-                            <!-- <h2 style='float:right;'
-                                class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold'>
-                                - &nbsp;By May</h2> -->
+                            <h2 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold text-mobile-center"  
+                                >Sensational Outcall Massage Pattaya</h2>
+                            <h2
+                                class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold text-mobile-center text-right'>
+                                - &nbsp;By May</h2>
 
 
                         </div>
 
                         <div class='col-md-10'>
                             <h2
-                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color">
+                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
                                 <b>An expert outcall massage and spa services in pattaya</b>
                             </h2>
 
