added footer brand text

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ h2{
             .text-mobile-center{
                 text-align: center;
             }
+            .footer-text-mob {
+                font-size: 18px !important;
+                font-weight: bold !important;
+            }
         }
     </style>
 
@@ -222,7 +226,7 @@ h2{
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
-                                <b>An expert outcall massage and spa services in pattaya</b>
+                                <b>Best expert outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
@@ -990,6 +994,8 @@ h2{
         <!-- //.row -->
     </div>
     <!-- //.container -->
+
+    
 </section>
 <!-- //Section - Contact End -->
 
@@ -999,6 +1005,11 @@ h2{
 <footer class="bg-white">
     <div class="container">
         <div class="row">
+            <div class="col-md-12">
+                <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob"  
+        >Sensational Outcall Massage Pattaya</h3>
+            </div>
+            <br/>
             <div class="col-sm-8">
                 <div class="footer-social">
                     <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
