--- a/sitemap.html
+++ b/sitemap.html
@@ -110,6 +110,12 @@
       .last-page {
         border: none;
       }
+      @media (max-width: 468px) {
+        .footer-text-mob {
+          font-size: 18px !important;
+          font-weight: bold !important;
+        }
+      }
     </style>
   </head>
 
