--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,10 @@
             .sm-title-extra-large-1 {
                 font-size: 22px !important;
             }
+            .footer-text-mob {
+                font-size: 18px !important;
+                font-weight: bold !important;
+            }
         }
     </style>
 
@@ -297,6 +301,10 @@
     <footer class="bg-white">
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob"  
+            >Sensational Outcall Massage Pattaya</h3>
+                </div>
                 <div class="col-sm-8">
                     <div class="footer-social">
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
