--- a/our-girls.html
+++ b/our-girls.html
@@ -75,6 +75,10 @@
                 font-size: 1.1rem !important;
                 text-align: center !important;
             }
+            .footer-text-mob {
+                font-size: 18px !important;
+                font-weight: bold !important;
+            }
         }
 
         ul {
@@ -303,6 +307,10 @@
     <footer class="bg-white">
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob"  
+            >Sensational Outcall Massage Pattaya</h3>
+                </div>
                 <div class="col-sm-8">
                     <div class="footer-social">
                         <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
