--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <title>Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya</title>
     <meta name="description"
-        content="Outcall Massage Pattaya provides best outcall massage services in Pattaya. Relax with 24x7 friendly home massage services at Sensational Outcall Massage Pattaya.">
+        content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334.">
     <meta name="keywords"
         content="outcall massage in pattaya, best outcall massage in pattaya, home massage and spa pattaya, best massage services in pattaya, outcall massage pattaya, home massage services pattaya, mobile massage services pattaya">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
@@ -226,7 +226,7 @@ h2{
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
-                                <b>Best expert outcall massage and spa services in pattaya</b>
+                                <b>Best and expert outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
