--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ h2{
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
-                                <b>Best and expert outcall massage and spa services in pattaya</b>
+                                <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
 
                             <h2
