--- a/index.html
+++ b/index.html
@@ -214,8 +214,9 @@ h2{
                             <img src='assets/images/03.png' class="img-fluid spaimg" alt='Best body massage in pattaya'
                              />
 
-                            <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold text-mobile-center"  
-                                >Sensational Outcall Massage Pattaya</h1>
+                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold text-mobile-center" style="
+                             font-family: 'Great Vibes', cursive;
+                         ">Sensational Outcall Massage Pattaya</h1>
                             <h2
                                 class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold text-mobile-center text-right'>
                                 - &nbsp;By May</h2>
