--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <meta property="og:type" content="Outcall Massage Pattaya" />
     
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://outcallmassagespattaya.com/" />
 
     <script type="application/ld+json">
         {
