--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
     <meta name="robots" content=”max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="https://outcallmassagespattaya.com/" />
+    <meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
+<meta name="twitter:title" content="Outcall Massage Pattaya | 24 Hours Best Home Massage & Spa Services in Pattaya" />
+<meta name="twitter:image" content="https://outcallmassagespattaya.com/assets/images/logo/logo-may-spa.png" />
 
     <script type="application/ld+json">
         {
