--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     }
     </script>
 
+    <div class="google-rating"><div itemscope="" itemtype="http://schema.org/Book"><div itemscope="" itemprop="aggregateRating" itemtype="http://schema.org/AggregateRating"><meta itemprop="itemReviewed" content="Sensational Outcall Massage Pattaya"><div class="my-stars"> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i></div><p class="aggRatings">Rated <span itemprop="ratingValue">4.8</span>/<span itemprop="bestRating">5</span> Based on <span itemprop="reviewCount">250</span> Verified Ratings</p><meta itemprop="worstRating" content="1"></div></div></div>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164230845-1"></script>
