--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,13 @@ h2{
                 <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob"  
         >Sensational Outcall Massage Pattaya</h3>
             </div>
-            <div class="google-rating"><div itemscope="" itemtype="http://schema.org/Book"><div itemscope="" itemprop="aggregateRating" itemtype="http://schema.org/AggregateRating"><meta itemprop="itemReviewed" content="Sensational Outcall Massage Pattaya"><div class="my-stars"> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i></div><p class="aggRatings">Rated <span itemprop="ratingValue">4.8</span>/<span itemprop="bestRating">5</span> Based on <span itemprop="reviewCount">250</span> Verified Ratings</p><meta itemprop="worstRating" content="1"></div></div></div>
+            <br>
+            <div class="google-rating"><div itemscope="" itemtype="http://schema.org/Book"><div itemscope="" itemprop="aggregateRating" itemtype="http://schema.org/AggregateRating"><meta itemprop="itemReviewed" content="Sensational Outcall Massage Pattaya"><div class="my-stars" style="
+                color: #fad000;
+                text-align: center;
+            "> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i> <i class="fa fa-star final-star"></i></div><p class="aggRatings" style="
+                text-align: center;
+            ">Rated <span itemprop="ratingValue">4.8</span>/<span itemprop="bestRating">5</span> Based on <span itemprop="reviewCount">250</span> Verified Ratings</p><meta itemprop="worstRating" content="1"></div></div></div>
             <br/>
             <div class="col-sm-8">
                 <div class="footer-social">
