--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="og:type" content="Outcall Massage Pattaya" />
     
     <meta name="google-site-verification" content="UAIVbs_A7-Gco3_QcSjcGoAT41xsmP72h7IbF_EyCd0" />
-    <meta name="robots" content=”max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="https://outcallmassagespattaya.com/" />
     <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Sensational outcall massage Pattaya. 24 hours best outcall/home massage and spa services in Pattaya. Book now +66 84-270-5334." />
