--- a/body-massage-pattaya.html
+++ b/body-massage-pattaya.html
@@ -14,6 +14,11 @@
     <meta name="keywords" content="best body massage in pattaya, full body massage in pattaya">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:title" content="Outcall Massage Pattaya" />
+<meta property="og:description" content="Outcall Massage Pattaya provides best outcall massage services, Mobile massage services, Home massage services and spa in Pattaya. Book our therapists today." />
+<meta property="og:url" content="https://outcallmassagespattaya.com/" />
+<meta property="og:image" content="https://outcallmassagespattaya.com/assets/images/logo/logo-may-spa.png" />
+<meta property="og:type" content="Outcall Massage Pattaya" />
 
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="canonical" href="https://outcallmassagespattaya.com/body-massage-pattaya.html" />
