--- a/services.html
+++ b/services.html
@@ -8,9 +8,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sensational Home Spa by May</title>
-    <meta name="description" content="MAY’S HOME SPA">
-    <meta name="keywords" content="MAY’S HOME SPA">
+    <title>Massage Services - Sensational Outcall Massage</title>
+    <meta name="description" content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
+    <meta name="keywords" content="Traditional Thai Spa (Dry Therapy), Traditional Oil Massage, Aroma Oil Therapy, Deep Tissue Therapy With Aroma, Balinese Therapy (Dry & Oil), And Couple Massage (Four Hands).">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Outcall Massage Pattaya" />
