--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ h2{
 
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <form action="contact/send_mail.php" method="post" id="form-contact">
+                <form action="POST" method="post" data-netlify='true'>
                     <div class="row">
                         <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
                             <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
