--- a/index.html
+++ b/index.html
@@ -966,14 +966,14 @@ h2{
                         <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
                             <input type="text" placeholder="* Your Name" name="name" id="name" class="required">
                             <input type="text" placeholder="* Your Email" name="email" id="email"
-                                class="required email">
+                                class="required email" required>
                             <input type="text" placeholder="Your Phone" name="phone" id="phone" class="number">
                         </div>
                         <!-- //.col-sm-6 -->
 
                         <div class="col-sm-6 position-relative" data-mh="mh-col-contact">
                             <textarea placeholder="* Your Message" name="message" id="message"
-                                class="required"></textarea>
+                                class="required" required></textarea>
                         </div>
                         <!-- //.col-sm-6 -->
                     </div>
