--- a/our-girls.html
+++ b/our-girls.html
@@ -60,7 +60,7 @@
     </script>
 
     <!-- Loading Bootstrap CSS -->
-    <link rel="shortcut icon" href="assets/images/logo/favicon-96x96.png" type="image/png">
+    <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
 
 
     <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
