added gallery image

--- a/gallery.html
+++ b/gallery.html
@@ -338,6 +338,65 @@
                 </div>
 
 
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/20.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/20.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/21.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/21.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/22.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/22.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/23.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/23.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/24.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/24.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/25.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/25.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/26.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/26.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/27.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/27.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                    <a href="/assets/images/gallery/28.jpeg" class="fancybox" rel="ligthbox">
+                        <img src="/assets/images/gallery/28.jpeg" class="zoom img-fluid " alt="">
+                    </a>
+                </div>
+
+
             </div>
 
 
