--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ h2{
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
-                        <li><a href="index.html" class="page-scroll">Contact</a></li>
+                        <li><a href="contact.html" class="page-scroll">Contact</a></li>
                     </ul>
                 </div>
                 <!-- //.navbar-collapse -->
