--- a/contact.html
+++ b/contact.html
@@ -300,10 +300,19 @@
             </div>
             <!-- //.row -->
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62219.97386694036!2d100.889624!3d12.923888!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ec9f3c54db95d93!2sSensational%20Outcall%20Massage%20Pattaya!5e0!3m2!1sen!2sus!4v1592291195717!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <!-- //.container -->
     </section>
     <!-- //Section - Contact End -->
+
+    <section id="contact" class="bg-white-3">
+        <div class="container">
+            <div class="row no-padding-rl no-padding-top padding-8">
+                <div class="col-md-6 col-md-offset-3 text-center">
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62219.97386694036!2d100.889624!3d12.923888!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ec9f3c54db95d93!2sSensational%20Outcall%20Massage%20Pattaya!5e0!3m2!1sen!2sus!4v1592291195717!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+</div>
+</div>
+</div>
+</section>
 
 
 
