--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -159,7 +159,7 @@
                         <li><a href="services.html" class="page-scroll">Services</a></li>
                         <li><a href="body-massage-pattaya.html" class="page-scroll">body massage</a></li>
                         <li><a href="thai-massage-pattaya.html" class="page-scroll">thai massage</a></li>
-                        <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Outcall hotel
+                        <li><a href="hotel-room-massage-service-pattaya.html" class="page-scroll">Hotel
                                 massage</a></li>
                         <li><a href="our-girls.html" class="page-scroll">Our girls</a></li>
                         <li><a href="https://blog.outcallmassagespattaya.com" class="page-scroll">Blog</a></li>
