--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
 
 
     <!-- Section - Home Start -->
-    <section class="height-100 no-padding overflow-hidden width-100">
+    <section style="background: url('./assets/images/bg-home-3.jpg');" id="home-bg-parallax"
+        class="height-100 no-padding overflow-hidden width-100">
         <!-- BG Parallax -->
         <div class="bg-parallax bg-overlay-black-7 width-100"></div>
 
