--- a/gallery.html
+++ b/gallery.html
@@ -129,10 +129,11 @@
         .modal-footer {
             display: none;
         }
+
         .footer-text-mob {
-                font-size: 18px !important;
-                font-weight: bold !important;
-            }
+            font-size: 18px !important;
+            font-weight: bold !important;
+        }
     </style>
 </head>
 
@@ -223,7 +224,7 @@
             <div class="row">
 
 
-                
+
 
 
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -298,8 +299,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob"  
-            >Sensational Outcall Massage Pattaya</h3>
+                    <h3
+                        class=" text-center text-dark  sm-title-extra-large-5 title-extra-large-1 font-weight-bold text-mobile-center footer-text-mob">
+                        Sensational Outcall Massage Pattaya</h3>
                 </div>
                 <div class="col-sm-8">
                     <div class="footer-social">
@@ -347,35 +349,10 @@
     <a href="#page-top" class="page-scroll scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
 
-    <!-- Loading jQuery -->
-    <script src="assets\js\jquery.min.js"></script>
-
-    <!-- Loading Bootstrap JS -->
-    <script src="assets\js\bootstrap.min.js"></script>
-
+    <script src="assets\js\lib\jquery.min.js"></script>
     <!-- Include all js plugins (below) -->
-    <script src="assets\js\pace.min.js"></script>
-    <script src="assets\js\debouncer.min.js"></script>
-    <script src="assets\js\jquery.easing.min.js"></script>
-    <script src="assets\js\flickity.pkgd.min.js"></script>
-    <script src="assets\js\jquery.inview.min.js"></script>
-    <script src="assets\js\jquery.matchHeight.js"></script>
-    <script src="assets\js\jquery.tinyscrollbar.min.js"></script>
-    <script src="assets\js\isotope.pkgd.min.js"></script>
-    <script src="assets\js\imagesloaded.pkgd.min.js"></script>
-    <script src="assets\js\jquery.countTo.js"></script>
-    <script src="assets\js\jquery.magnific-popup.min.js"></script>
-    <script src="assets\js\jquery.validate.min.js"></script>
-
-    <!-- BG Parallax JS -->
-    <script src="assets\js\lib\greensock\TweenMax.min.js"></script>
-    <script src="assets\js\ScrollMagic.min.js"></script>
-    <script src="assets\js\animation.gsap.min.js"></script>
-
-    <!-- Loading Theme JS -->
-    <script src="assets\js\main.js"></script>
-    <script src="assets\js\switch-style.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <script src="dist\root.js"></script>
+    <script src="assets\js\lib\main.js"></script>
 
 </body>
 <script>
