--- a/contact.html
+++ b/contact.html
@@ -72,25 +72,9 @@
 
     <!-- Loading Bootstrap CSS -->
     <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
-    <link href="assets\css\bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-
-
-    <!-- Loading Font Icons -->
-    <link href="assets\css\font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- Include all css plugins (below), or include individual files as needed -->
-    <link href="assets\css\flickity.min.css" rel="stylesheet" type="text/css">
-    <link href="assets\css\magnific-popup.css" rel="stylesheet" type="text/css">
-
-    <!-- Main CSS -->
-    <link href="assets\css\niobe_main.min.css" rel="stylesheet" type="text/css">
-    <link href="assets\css\niobe_style.css" rel="stylesheet" type="text/css">
-
-    <!-- Color Scheme CSS -->
-    <link href="assets\css\niobe_color_pink.css" rel="stylesheet" type="text/css">
-    <link href="assets\css\switch-style.css" rel="stylesheet" type="text/css">
+    <link href="assets\dist\root.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
 
     <style>
@@ -392,10 +376,34 @@
     <a href="#page-top" class="page-scroll scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
 
+    <!-- Loading jQuery -->
     <script src="assets\js\lib\jquery.min.js"></script>
+
+    <!-- Loading Bootstrap JS -->
+    <script src="assets\js\bootstrap.min.js"></script>
+
     <!-- Include all js plugins (below) -->
-    <script src="dist\root.js"></script>
+    <script src="assets\js\pace.min.js"></script>
+    <script src="assets\js\debouncer.min.js"></script>
+    <script src="assets\js\jquery.easing.min.js"></script>
+    <script src="assets\js\flickity.pkgd.min.js"></script>
+    <script src="assets\js\jquery.inview.min.js"></script>
+    <script src="assets\js\jquery.matchHeight.js"></script>
+    <script src="assets\js\jquery.tinyscrollbar.min.js"></script>
+    <script src="assets\js\isotope.pkgd.min.js"></script>
+    <script src="assets\js\imagesloaded.pkgd.min.js"></script>
+    <script src="assets\js\jquery.countTo.js"></script>
+    <script src="assets\js\jquery.magnific-popup.min.js"></script>
+    <script src="assets\js\jquery.validate.min.js"></script>
+
+    <!-- BG Parallax JS -->
+    <script src="assets\js\TweenMax.min.js"></script>
+    <script src="assets\js\ScrollMagic.min.js"></script>
+    <script src="assets\js\animation.gsap.min.js"></script>
+
+    <!-- Loading Theme JS -->
     <script src="assets\js\lib\main.js"></script>
+    <script src="assets\js\switch-style.js"></script>
 
 </body>
 
