--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 
 
-    <link href="assets\dist\root.css" rel="stylesheet" type="text/css">
+    <link async href="assets\dist\root.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
 
