--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <link rel="shortcut icon" href="https://blog.outcallmassagespattaya.com/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-    <link href="assets\dist\root.css" rel="stylesheet" type="text/css">
+    <link async href="assets\dist\root.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
 
     <style>
