--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
     <!-- Section - Home Start -->
     <section style="background: url('https://outcallmassagespattaya.com/assets/images/bg-home-3.jpg');"
-        id="home-bg-parallax" class="height-100 no-padding overflow-hidden width-100 ">
+        class="height-100 no-padding overflow-hidden width-100 ">
         <!-- BG Parallax -->
-        <div class="bg-parallax bg-overlay-black-7 width-100"></div>
+        <!-- <div class="bg-parallax bg-overlay-black-7 width-100"></div> -->
 
         <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
@@ -250,7 +250,6 @@
                                 class="page-scroll btn btn-base-color sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl ">Gallery</a>
 
                         </div>
-                        <!-- //.col-md-8 -->
                     </div>
                     <!-- //.row -->
                 </div>
