--- a/index.html
+++ b/index.html
@@ -203,14 +203,11 @@
     </nav>
     <!-- //Navigation End -->
 
+    <!-- 
 
-
-    <!-- Section - Home Start -->
     <section style="background: url('https://outcallmassagespattaya.com/assets/images/bg-home-3.jpg');"
         class="height-100 no-padding overflow-hidden width-100 ">
-        <!-- BG Parallax -->
-        <!-- <div class="bg-parallax bg-overlay-black-7 width-100"></div> -->
-
+        <div class="bg-parallax bg-overlay-black-7 width-100"></div>
         <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
                 <div class="container">
@@ -218,48 +215,32 @@
                         <div class="col-md-11 mobileimg">
                             <img src='assets/images/03.png' class="img-fluid spaimg"
                                 alt='Best body massage in pattaya' />
-
                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold text-mobile-center"
-                                style="
-                             font-family: 'Great Vibes', cursive;
-                         ">Sensational Outcall Massage Pattaya</h1>
+                                style="font-family: 'Great Vibes', cursive;">Sensational Outcall Massage Pattaya</h1>
                             <h2
                                 class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold text-mobile-center text-right'>
-                                - &nbsp;By May</h2>
-
-
+                                - &nbsp;By May
+                            </h2>
                         </div>
-
                         <div class='col-md-10'>
                             <h2
                                 class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
                                 <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
-
                             <h2
                                 class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large ">
                                 GET PROFESSIONAL AND BEST BODY SPA/MASSAGE IN JUST ONE CLICK BY SITTING AT HOME/HOTEL AT
                                 PATTAYA AND FEEL THE BEST EXPERIENCE OF AUTHENTIC THAI MASSAGE BY OUR TRAINED AND
                                 PROFESSIONAL THERAPIST.
-
                             </h2>
-
-
-
                             <a href="/gallery.html"
                                 class="page-scroll btn btn-base-color sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl ">Gallery</a>
-
                         </div>
                     </div>
-                    <!-- //.row -->
                 </div>
-                <!-- //.container -->
             </div>
-            <!-- //.display-table-cell -->
         </div>
-        <!-- //.display-table -->
-    </section>
-    <!-- //Section - Home End -->
+    </section> -->
 
 
 
