--- a/index.html
+++ b/index.html
@@ -203,10 +203,13 @@
     </nav>
     <!-- //Navigation End -->
 
+    
 
-    <section style="background: url('https://outcallmassagespattaya.com/assets/images/bg-home-3.jpg'),rgba(0,0,0,0.2);"
+    <section style="background: url('/assets/images/bannerimg.png');
+    background-size: cover; background-repeat: no-repeat;
+    "
         class="height-100 no-padding overflow-hidden width-100 ">
-        <div class=" bg-overlay-black-7 width-100"></div>
+    
         <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
                 <div class="container">
@@ -238,7 +241,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </>
     </section> 
 
 
