--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </nav>
     <!-- //Navigation End -->
 
-    <section style="background: url('/assets/images/bannerimgg .png');
+    <section style="background: url('/assets/images/mayspa.jpg');
     background-size: cover; background-repeat: no-repeat;
     "
         class="height-100 no-padding overflow-hidden width-100 ">
