addded h2 tag in sub heading

--- a/index.html
+++ b/index.html
@@ -59,13 +59,8 @@
     <script>
 
         window.dataLayer = window.dataLayer || [];
-
         function gtag() { dataLayer.push(arguments); }
-
         gtag('js', new Date());
-
-
-
         gtag('config', 'UA-164230845-1');
 
     </script>
@@ -76,20 +71,17 @@
     <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
     <link async href="assets\dist\root.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
-
+<!-- Color Scheme CSS -->
+<link href="assets\css\niobe_color_pink.css" rel="stylesheet" type="text/css">
+<link href="assets\css\switch-style.css" rel="stylesheet" type="text/css">
+    
     <style>
         .textcc {
             text-align: center;
         }
 
-
-        h2 {
-            font-family: 'Signika', sans-serif;
-
-        }
-
-        h2 {
-            font-family: 'Great Vibes', cursive;
+        .greatVibes {
+            font-family: 'Great Vibes', cursive !important;
         }
 
         .fontstyle {
@@ -218,13 +210,15 @@
                             <h1 class="letter-spacing-5 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-4 font-weight-bold text-mobile-center"
                                 style="font-family: 'Great Vibes', cursive;">Sensational Outcall Massage Pattaya</h1>
                             <h2
-                                class='text-white xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold text-mobile-center text-right'>
+                                class='text-white greatVibes xs-title-extra-large sm-title-extra-large-1 title-extra-large-2 letter-spacing-5 font-weight-bold text-mobile-center text-right'>
                                 - &nbsp;By May
                             </h2>
                         </div>
                         <div class='col-md-10'>
                             <h2
-                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding">
+                                class="fontstyle letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-light  xs-text-large text-extra-large title-underline-thick-base-color mobile-padding
+                            
+                                ">
                                 <b>Best outcall massage and spa services in pattaya</b>
                             </h2>
                             <h2
