--- a/thai-massage-pattaya.html
+++ b/thai-massage-pattaya.html
@@ -95,9 +95,7 @@
             text-align: center;
         }
 
-        h2 {
-            font-family: 'Great Vibes', cursive;
-        }
+      
 
         @media (max-width: 468px) {
             .textcc {
@@ -185,9 +183,9 @@
                 <div class="col-md-6 col-md-offset-1">
                     <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
                         style='padding-top: 50px;'>Best and Authentic Thai Massage</h1>
-                    <p class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
+                    <h2 class="text-extra-large xs-text-large text-gray-dark-2 no-margin-rl no-margin-bottom margin-4">
                         <strong>
-                            Get the Best and Authentic Outcall Thai Massage</strong></p>
+                            Get the Best and Authentic Outcall Thai Massage</strong></h2>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">No
                         other way can be convenient and better to rejuvenate your mind and body and make you feel fresh
                         with satisfaction that can be seen on your face than getting the best and authentic Thai massage
