--- a/contact.html
+++ b/contact.html
@@ -200,10 +200,13 @@
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h1 class="font-family-alt font-weight-700 title-underline-thick-base-color letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color" style="margin-top: 60px;">Contact Us</h1>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <i>Have a question or concern? Fill out the form, and submit. We will get back to you
-                            shortly.</i>
-                    </p>
+                    <h2 class="margin-4 no-margin-bottom no-margin-rl  text-gray-dark-2 xs-text-large text-extra-large">
+                        <i>
+                            <strong>
+                                Have a question or concern? Fill out the form, and submit. We will get back to you
+                            shortly.
+                            </strong>
+                        </i></h2>
                 </div>
                 <!-- //.col-md-6 -->
             </div>
