--- a/contact.html
+++ b/contact.html
@@ -82,10 +82,11 @@
             text-align: center;
         }
 
-        h2 {
-            font-family: 'Great Vibes', cursive;
-        }
+     
 
+  .greatVibes {
+            font-family: 'Great Vibes', cursive !important;
+        }
         .fontstyle {
             font-family: 'Signika', sans-serif;
         }
