--- a/services.html
+++ b/services.html
@@ -96,9 +96,7 @@
             text-align: center;
         }
 
-        h2 {
-            font-family: 'Great Vibes', cursive;
-        }
+        
 
         @media (max-width: 468px) {
             .textcc {
@@ -180,13 +178,13 @@
         <div class="container-fluid">
             <div class="row no-padding-rl no-padding-top padding-8">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
-                        style='margin-top: 50px;'>Services</h3>
-                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
-                        <i>Our Spa accommodates all of your relaxation needs. Our aim is to give you 5 star spa
-                            facilities at your home.
+                    <h1 class="font-family-alt font-weight-700 letter-spacing-2 text-uppercase xs-title-small title-medium title-underline-thick-base-color"
+                        style='margin-top: 50px;'>Services</h1>
+                    <h2 class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
+                        <i><strong>Our Spa accommodates all of your relaxation needs. Our aim is to give you 5 star spa
+                            facilities at your home.</strong>
                         </i>
-                    </p>
+                    </h2>
                     <h1
                         class="font-family-alt letter-spacing-1 margin-3 text-uppercase no-margin-bottom no-margin-rl text-gray-dark  xs-text-large text-extra-large ">
                         <b>Types of avaliable expert outcall massage services -</b>
