--- a/hotel-room-massage-service-pattaya.html
+++ b/hotel-room-massage-service-pattaya.html
@@ -223,9 +223,12 @@
                         home/hotel room.Dont make yourself tired by going out.book us now and get the perfect outcall
                         massage at your doorstep.
                     </p>
+
+                    <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">As lady arrive your hotel you may be required to confirm the lady arrival with reception. As massage complete u have to approve hotel for lady ID card to be returned to her upon leaving the hotel.
+                        Now no need to go out & make yourself tired. Book us and make your time more special with our lady in your own hotel room.</p>
                     <p class="margin-4 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-large text-extra-large">
                         Thank you for choosing us.
-                        Sensational home spa by may
+                        Sensational outcall massage by may
                         Best outcall massage services in pattaya</p>
 
 
